input-validation newTransaction
